@@ -16,6 +16,16 @@
             </value>
         </item>
         <item>
+            <key> <string>creation_guard</string> </key>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>description</string> </key>
+            <value> <string></string> </value>
+        </item>
+        <item>
             <key> <string>groups</string> </key>
             <value>
               <tuple/>
@@ -24,6 +34,14 @@
         <item>
             <key> <string>id</string> </key>
             <value> <string>delivery_tax_interaction_workflow</string> </value>
+        </item>
+        <item>
+            <key> <string>manager_bypass</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
+            <key> <string>title</string> </key>
+            <value> <string>Delivery Tax Interaction Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
