@@ -16,6 +16,16 @@
             </value>
         </item>
         <item>
+            <key> <string>creation_guard</string> </key>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>description</string> </key>
+            <value> <string></string> </value>
+        </item>
+        <item>
             <key> <string>groups</string> </key>
             <value>
               <tuple/>
@@ -30,6 +40,10 @@
             <value> <string>delivered</string> </value>
         </item>
         <item>
+            <key> <string>manager_bypass</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
             <key> <string>permissions</string> </key>
             <value>
               <tuple/>
@@ -41,7 +55,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Internal Packing List</string> </value>
+            <value> <string>Internal Packing List Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
