@@ -55,7 +55,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Container Workflow</string> </value>
+            <value> <string>Packing List Container Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
