@@ -1,3 +1,6 @@
+2009-03-13 yusei
+* Correct workflow titles.
+
 2009-02-15 yusei
 * Fixed wrong field name in OpenSaleOrder_view.
 
